arregle bug de overflow en body

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -227,6 +227,7 @@ body {
    font-size: 15px;
    line-height: 30px;
    color: #838C95;
+   overflow-x: hidden !important; 
 
    -webkit-font-smoothing: antialiased;
    /* Fix for webkit rendering */
